# gpt-server

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml
app/: app.py  auth.py  ext.py  gpt.py  model.py  response.py  utils.py
app/templates/: login.html
fixture/: config.py
migrations/: env.py
migrations/versions/: dafee6eb1cae_create_auth_table.py  f2359984d1a5_create_tables.py
tests/: test_gpt.py
